# clippy-reviewdog-filter

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: checkstyle.rs  main.rs  sample.json  sample.txt  sample_1.77.txt
src/message/: compiler_message.rs  mod.rs  package_id.rs  target.rs
