[package]
name = "clippy-reviewdog-filter"
description = "A filter for integrating Clippy with Reviewdog"
version = "0.1.2"
edition = "2018"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qnighy/clippy-reviewdog-filter"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33.3"
semver = "1.0.3"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
xml-rs = "0.8.3"
