[package]
name = "clippy-reviewdog-filter"
description = "A filter for integrating Clippy with Reviewdog"
version = "0.1.4"
edition = "2021"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qnighy/clippy-reviewdog-filter"

[dependencies]
log = "0.4.20"
env_logger = "0.10.1"
clap = "4.4.17"
semver = "1.0.21"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
xml-rs = "0.8.19"
