[package]
name = "clippy-reviewdog-filter"
description = "A filter for integrating Clippy with Reviewdog"
version = "0.1.5"
edition = "2021"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qnighy/clippy-reviewdog-filter"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
regex = "1.10.4"
clap = "4.5.4"
semver = "1.0.22"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
xml-rs = "0.8.20"
cargo-util-schemas = "0.3.0"
